Moddifying the gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ ExportedObj/
 *.booproj
 *.svd
 *.pdb
+The Flocking Dead - C#/Flock/bin/Debug/Flock.vshost.exe.manifest
+The Flocking Dead - C#/Flock/obj/x86/Debug/TheFlockingDead.csproj.FileListAbsolute.txt
