--- a/BinaryQuestions Csharp/BinaryQuestions/BinaryQuestions.csproj
+++ b/BinaryQuestions Csharp/BinaryQuestions/BinaryQuestions.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Algorithms.cs" />
     <Compile Include="BTNode.cs" />
     <Compile Include="BTTree.cs" />
     <Compile Include="Program.cs" />
