--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
+description: Repo used for the Artificial intellegince class I am following, excersizes are collaborated on with Nick Overweg
+show_downloads: true
+google_analytics:
 theme: jekyll-theme-cayman
